[tool.poetry]
name = "cyber-guardians-server"
version = "0.1.0"
description = ""
authors = ["Jueuunn7 <wndmsrla1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-eventstream = "^5.3.1"
daphne = "^4.1.2"
django-cors-headers = "^4.6.0"
range-key-dict = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
